<resources>
    <string name="app_name">FLUX</string>
    <string name="hello_world">Hello worl!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="mobile_no">Mobile No</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="info_create_acc">No account yet? Create one</string>
    <string name="lbl_forgot_pwd">Forgot Password?</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="infor_login">Already a member? Login</string>
    <string name="create_account">Create Account</string>
    <string name="content_description_media"> Test Description</string>
    <string name="generic_no_internet">We are sorry, unable to connect at this time, Please try again</string>
    <string name="request_timeout">Request Timeout</string>
    <string name="alert_title">Alert!!</string>
    <string name="ok_button">Ok</string>
    <string name="proceed">Proceed</string>
    <string name="test_user_name">Test User Name</string>
    <string name="test_user_email">testuseremail@gmail.com</string>
    <string name="login_success">Login Successful ...</string>
    <string name="no_data_available">No data available</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_product_list">Product List</string>
    <string name="lbl_product_id">Product Id</string>
    <string name="lbl_product_name">Product Name</string>
    <string name="lbl_product_code">Product Code</string>
    <string name="lbl_product_net_price">Product Net Price</string>
    <string name="lbl_product_total_price">Product Total Price</string>
    <string name="lbl_product_unit">Unit</string>
    <string name="lbl_product_part_no">Part no.</string>
    <string name="lbl_product_schema_id">Schema Id</string>
    <string name="lbl_product_schema_name">Schema Name</string>
    <string name="lbl_product_packaging">Packaging</string>
    <string name="lbl_product_segment">Segment</string>
    <string name="lbl_product_gst">GST(%)</string>
    <string name="menu_home">Home</string>
    <string name="menu_product">Products</string>
    <string name="menu_schemes">Schemes</string>
    <string name="menu_beat">Beat</string>
    <string name="menu_order">Order</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_leave">Leave</string>
    <string name="menu_expense">Expense</string>
    <string name="menu_myprofile">Profile</string>
    <string name="menu_scanQRcode">Scan QR</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_myteam">Team List</string>
    <string name="menu_createuser">Create User</string>
    <string name="menu_complaints">Complaints</string>
    <string name="title_activity_assign_beat">AssignBeatActivity</string>
    <string name="title_activity_create_beat">CreateBeatActivity</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_performance">Performance</string>
    <string name="ass_task">Assign Task</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="lbl_beat_id">Beat Id</string>
    <string name="lbl_beat_name">Beat Name</string>
    <string name="lbl_beat_area">Beat Area</string>
    <string name="lbl_assign_to">Assign To</string>
    <string name="lbl_start_date">Start Date</string>
    <string name="lbl_end_date">End Date</string>
    <string name="lbl_get_beat">Get Beat</string>
    <string name="lbl_schedule_beat">Schedule Beat</string>
    <string name="lbl_add_task">Add Task</string>
    <string name="lbl_type">Type</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_area">Area</string>
    <string name="lbl_location">Location</string>
    <string name="lbl_view_history">View History</string>
    <string name="lbl_beat_order">Order</string>
    <string name="lbl_beat_desc">Target and Actual</string>
    <string name="lbl_leave_name">Leave Purpose</string>
    <string name="lbl_leave_from">Leave From</string>
    <string name="lbl_leave_to">Leave To</string>
    <string name="lbl_leave_no_of_days">No. of Leave days</string>
    <string name="lbl_leave_status">Leave Status</string>
    <string name="lbl_leave_comments">Comments</string>
    <string name="apply_leave">Apply Leave</string>
    <string name="leave_list_header">Leave Summary of April 2020</string>
    <string name="apply">Apply</string>
    <string name="capture_img">Capture Image</string>
    <string name="select_img">Select Image</string>
    <string name="create_exp">Create Expense</string>
    <string name="expense_id">Expense Id</string>
    <string name="expense_type">Expense Type</string>
    <string name="expense_type_id">Expense TypeId</string>
    <string name="min_exp_amt">Min Exp Amt</string>
    <string name="adv_exp_amt">Adv Exp Amt</string>
    <string name="km_travelled">K.M Travelled</string>
    <string name="applied_on">Applied on</string>
    <string name="status">Status</string>
    <string name="approved_by">Approved By</string>
    <string name="user_name">User Name</string>
    <string name="login_id">Login Id</string>
    <string name="um_active_inactive">UM Active Inactive</string>
    <string name="role">Role</string>
    <string name="phoneNo">Phone no</string>
    <string name="Address">Address</string>
    <string name="dob">Dob</string>
    <string name="bank_name">Bank Name</string>
    <string name="branch_name">Branch Name</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="ac_no">Bank A/C no</string>
    <string name="paytm">Paytm</string>
    <string name="gpay">Gpay</string>
    <string name="paypal">Paypal</string>
    <string name="order_id">Order ID</string>
    <string name="order_dist_name">Distributer Name</string>
    <string name="order_dealer_name">Dealer Name</string>
    <string name="order_date">Order Date</string>
    <string name="order_amount">Order Amount</string>
    <string name="order_status">Order Status</string>
    <string name="order_created_by">Created By</string>
    <string name="order_search">Dealer / Dist Name</string>
    <string name="create_order">Create Order</string>
    <string name="search_prod_for_order">Search Products for order</string>
    <string name="prod_order_tot">Total</string>
    <string name="prod_check_out">Check Out</string>
    <string name="prod_gst">GST</string>
    <string name="prod_place_order">Place Order</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="strikeThroughData">DLP : <strike>₹ 350</strike></string>
    <string-array name="array_name">
        <item>-- User --</item>
        <item>distributor</item>
        <item>dealer</item>
        <item>mechanics</item>
    </string-array>
    <string-array name="array_name2">
        <item>-- Complaint type --</item>
        <item>storage</item>
        <item>spillage</item>
        <item>breakage</item>
        <item>miscllanious</item>
    </string-array>
    <string-array name="array_name44">
        <item>--Product Name --</item>
        <item>Product 1</item>
        <item>Product 2</item>
        <item>Product 3</item>
        <item>Product 4</item>
    </string-array>
    <string-array name="payment_not_received">
        <item>--Payment Not Received --</item>
        
    </string-array>
    <string-array name="complaint_on_prod_quality">
        <item>--Complain vs Quality--</item>
        
    </string-array>
    <string-array name="turn_over_range">
        <item>--Turnover --</item>
        
    </string-array>
    <string-array name="order_not_received">
        <item>--Order Not received Or Less--</item>
        

    </string-array>
    <string-array name="dealer_List">
        <item>--User Name--</item>
        <item>ABC Oil</item>
        <item>Raja Oil</item>
        <item>Best Oil</item>
        <item>Sample Oil</item>

    </string-array>
    <string-array name="dd_conf">
        <item>--Select --</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="price_prob_reason">
        <item>--Price Problem--</item>
        

    </string-array>
    <string-array name="preferring_reasons">
        <item>--Preferring Reason --</item>
        

    </string-array>
    <string-array name="preferred_company">
        <item>--Preferred Company--</item>
        

    </string-array>
    <string-array name="payment_mode_array">
        <item>--Select Payment Mode--</item>
        <item>Cash</item>
        <item>Cheque</item>
        <item>Debit Card</item>
        <item>Credit Card</item>
        <item>Netbanking</item>
    </string-array>
    <string-array name="array_beat">
        <item>--Select Beat --</item>
        <item>Beat A</item>
        <item>Beat B</item>
        <item>Beat C</item>
    </string-array>
    <string-array name="filter_category">
        <item>-- Category --</item>
    </string-array>
    <string-array name="filter_segment">
        <item>-- Segment --</item>
    </string-array>
    <string-array name="filter_area">
        <item>-- Area --</item>
    </string-array>
    <string-array name="filter_district">
        <item>-- District --</item>
    </string-array>
    <string-array name="array_paymentType">
        <item>Cash</item>
        <item>Cheque</item>
    </string-array>
    <string-array name="array_dealer">
        <item>Select Type</item>
        <item>Dealer</item>
    </string-array>
    <string-array name="array_dealDist">
        <item>Select Type</item>
        <item>Dealer</item>
        <item>Distributor</item>
    </string-array>
    <string-array name="filter_grading">
        <item>-- Grading --</item>

    </string-array>
    <string name="rationale_camera">This app needs access to your camera so you can scan code.</string>
    <string name="sales">Sales</string>
    <string name="collections">Collections</string>
    <string name="leaves">Leaves</string>
    <string name="expenses">Expenses</string>
    <string name="collection">Collections</string>
    <string name="annually">Yearly</string>
    <string name="hly">Half Yearly</string>
    <string name="quarterly">Quarterly</string>
    <string name="monthly">Monthly</string>
    <string name="orderTarget">Target Qty</string>
    <string name="orderTargetAchieve">Target Amount</string>
    <string name="collectionTarget">Collection Target</string>
    <string name="collectionTargetAchieve">Collection Target Achieve</string>
    <string name="annual">Annual</string>
    <string name="leavesTaken">Leaves Taken</string>
    <string name="totalExpense">Total Expenses</string>
    <string name="expenseTask">Expense Per Task</string>
    <string name="invoiceDate">Date</string>
    <string name="invoiceNo">Invoice No</string>
    <string name="invoiceAmount">Amount</string>
    <string name="enterAmount">Enter Amount</string>
    <string name="enterName">Expense Name</string>
    <string name="menu_payment_confirmation">Payment Confirmation</string>
    <string name="enterKm">Km</string>
    <string name="beatName">Beat Name</string>
    <string name="expenseDate">Expense Date</string>
    <string name="amount">Amount</string>
    <string name="type">Type</string>
    <string name="addImage">Add Image</string>
    <string name="distributorName">Distributor Name</string>
    <string name="outStandingAmount">Outstanding Amount</string>
    <string name="regionName">Region</string>
    <string name="zone">Zone</string>
    <string name="district">District</string>
    <string name="creditDay">Exceed Days</string>
    <string name="creditLimit">Credit Limit</string>
    <string name="amountRs">Amount\n(₹)</string>
</resources>