<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_invoice_no_value"
            android:padding="@dimen/padding_10"
            android:text="@string/invoiceNo"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/tv_invoice_date_value"
            android:padding="@dimen/padding_10"
            android:textAllCaps="true"
            android:layout_weight="1"
            android:text="@string/invoiceDate"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/tv_invoice_amount_value"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/invoiceAmount"
            android:padding="@dimen/padding_10"
            android:layout_width="wrap_content"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cardview_shadow_start_color"/>


</RelativeLayout>